@@ -474,11 +474,15 @@ textarea {
     -moz-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
     display: inline-block;
-    max-width: 100%;
+    width: 158px;
     height: auto;
     -webkit-border-radius: .625em;
     -moz-border-radius: .625em;
     border-radius: .625em;
+}
+.img-polaroid img {
+    width: 100%;
+    height: auto;
 }
 
 .img-responsive {
@@ -755,8 +759,8 @@ textarea {
 }
 
 .tooltip-poster {
-    height: 225px;
     width: 150px;
+    height: auto;
     -webkit-border-radius: .625em;
     -moz-border-radius: .625em;
     border-radius: .625em;
